--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h2>Hello World!</h2>
+    <iframe src="https://www.baidu.com" style="width: 300px; height: 200px;"></iframe>
     <script src="main.js"></script>
 </body>
 </html>
